--- a/index.html
+++ b/index.html
@@ -62,8 +62,9 @@
       </p>
     </header>
     <main class="main">
-      <article class="main__article">
+      <article class="main__article main__article-in-columns">
         <h3 class="main__article-title">Почему сосредоточиться так сложно</h3>
+        <div> 
         <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
         <p class="main__paragraph">
           Особенно сложно сосредоточиться, когда задач много и все они — важные.
@@ -79,7 +80,9 @@
           А когда в поле внимания попадает несколько важных задач, организм
           паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за
           этого мы работаем невнимательно: ошибаемся и быстро устаём.
-        </p>
+        </p>          
+        </div>
+        <div>
         <h4 class="main__paragraph-title title-decor">Дофамин</h4>
         <p class="main__paragraph">
           С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
@@ -90,10 +93,12 @@
           время и выделяется дофамин — и мы чувствуем удовольствие. Получается
           замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
           получаешь.
-        </p>
+        </p>          
+        </div>
       </article>
       <article class="main__article">
         <h3 class="main__article-title">Что снижает концентрацию внимания?</h3>
+        <div class="card">
         <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
         <p class="main__paragraph">
           Как концентрация может снижаться из-за… концентрации? Любая стрессовая
@@ -102,7 +107,9 @@
           Например, читать новости вместо работы. Но быть собранными всё время —
           невозможно. Концентрация — мышца, и она может не выдержать, если не
           давать ей отдохнуть.
-        </p>
+        </p>          
+        </div>
+        <div class="card">
         <h4 class="main__paragraph-title title-decor">Еда</h4>
         <p class="main__paragraph">
           «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
@@ -111,7 +118,9 @@
           «углеводные качели»: как только действие «быстрых углеводов»
           заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше
           быстрых углеводов.
-        </p>
+        </p>          
+        </div>
+        <div class="card">
         <h4 class="main__paragraph-title title-decor">Гаджеты</h4>
         <p class="main__paragraph">
           Да-да, это та самая ситуация, когда на экране ноутбука — код, в
@@ -121,9 +130,10 @@
           концентрации, человеку в среднем нужно 20 минут. Вот и получается, что
           чем больше времени мы проводим в гаджетах, тем больше времени затем
           нужно, чтобы вернуться к работе.
-        </p>
+        </p>          
+        </div>
       </article>
-      <article class="main__article">
+      <article class="main__article main__article-in-columns">
         <h3 class="main__article-title">
           Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
           секунд)
@@ -133,6 +143,7 @@
         >
           5 простых (на самом деле не очень) советов
         </h4>
+        <div class="card">
         <h5 class="main__paragraph-subtitle title-decor">
           Представьте небо и облака
         </h5>
@@ -145,14 +156,18 @@
           за тучами, и никуда не денется. Это упражнение поможет вернуться в
           настоящий момент, а не волноваться о потенциальных проблемах из
           будущего.
-        </p>
+        </p>          
+        </div>
+        <div class="card">
         <h5 class="main__paragraph-subtitle title-decor">Включите музыку</h5>
         <p class="main__paragraph">
           Но не любую, и не любимую. Любимая может быть связана с сильными
           положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
           тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
           включить плейлист с «белым шумом» или нейромузыкой.
-        </p>
+        </p>          
+        </div>
+        <div class="card">
         <h5 class="main__paragraph-subtitle title-decor">Прогуляйтесь</h5>
         <p class="main__paragraph">
           Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
@@ -166,24 +181,31 @@
           прогулку с физическими упражнениями или бегом — так в мозг поступит
           ещё больше кислорода и он будет лучше работать. Но и простая
           двадцатиминутная прогулка — тоже отличный вариант.
-        </p>
+        </p>          
+        </div>
+        <div class="card">
         <h5 class="main__paragraph-subtitle title-decor">Хорошо ешьте</h5>
         <p class="main__paragraph">
           Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
           препятствуют резким скачкам сахара в крови. Например, с высоким
           содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
           коричневый рис, хлеб из цельнозерновой пшеницы.
-        </p>
+        </p>          
+        </div>
+        <div class="card">
         <h5 class="main__paragraph-subtitle title-decor">Читайте</h5>
         <p class="main__paragraph">
           Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
           прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
           А вот интересная книга способна затянуть и на несколько часов и круто
           тренирует направленное внимание.
-        </p>
+        </p>          
+        </div>
       </article>
+    </main>
+    <section class="main__galery">
       <h4 class="main__paragraph-title title-decor">А можно в картинках?</h4>
-      <ul class="main__galery">
+      <ul class="main__galery-list">
         <li class="main__galery-list-item">
           <img
             src="./images/sunset.png"
@@ -225,7 +247,7 @@
           />
         </li>
       </ul>
-    </main>
+    </section>
     <footer class="footer decorated-zone">
       <h2 class="footer__title">focus</h2>
     </footer>
