--- a/index.html
+++ b/index.html
@@ -62,192 +62,199 @@
       </p>
     </header>
     <main class="main">
-      <article class="main__article main__article-in-columns">
-        <h3 class="main__article-title">Почему сосредоточиться так сложно</h3>
-        <div> 
-        <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
-        <p class="main__paragraph">
-          Особенно сложно сосредоточиться, когда задач много и все они — важные.
-          Где же легендарная многозадачность, когда она так нужна вам (и всем
-          нанимающим менеджерам этого мира)? А дело в том, что её просто не
-          существует. Исследователи
-          <a
-            href="https://dana.org/news-and-insights"
-            class="main__paragraph-link"
+      <article>
+        <section class="main__section">
+          <h3 class="main__section-title">Почему сосредоточиться так сложно</h3>
+          <div class="text-group">
+            <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
+            <p class="main__paragraph">
+              Особенно сложно сосредоточиться, когда задач много и все они —
+              важные. Где же легендарная многозадачность, когда она так нужна
+              вам (и всем нанимающим менеджерам этого мира)? А дело в том, что
+              её просто не существует. Исследователи
+              <a
+                href="https://dana.org/news-and-insights"
+                class="main__paragraph-link"
+              >
+                выяснили</a
+              >, что мозгу тяжело концентрироваться даже на двух делах
+              одновременно. А когда в поле внимания попадает несколько важных
+              задач, организм паникует и выделяет кортизол и адреналин —
+              «гормоны стресса». Из-за этого мы работаем невнимательно:
+              ошибаемся и быстро устаём.
+            </p>
+          </div>
+          <div class="text-group">
+            <h4 class="main__paragraph-title title-decor">Дофамин</h4>
+            <p class="main__paragraph">
+              С гормонами стресса всё понятно, но дальше — ещё интереснее. В
+              нашей невозможности сосредоточиться замешана и полная
+              противоположность стрессу — дофамин. Это вещество участвует в
+              системе вознаграждения мозга. Причём тут он? Мы часто отвлекаемся
+              от важной задачи на что-то более «приятное» для мозгов. Например,
+              смотрим лайки в соцсетях. В это время и выделяется дофамин — и мы
+              чувствуем удовольствие. Получается замкнутый круг: чем больше
+              отвлекаешься, тем больше удовольствия получаешь.
+            </p>
+          </div>
+        </section>
+        <section class="main__section">
+          <h3 class="main__section-title">
+            Что снижает концентрацию внимания?
+          </h3>
+          <div class="text-group">
+            <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
+            <p class="main__paragraph">
+              Как концентрация может снижаться из-за… концентрации? Любая
+              стрессовая ситуация (и резко меняющийся мир в целом) заставляет
+              наш мозг постоянно «сканировать» окружающую среду на предмет
+              опасности. Например, читать новости вместо работы. Но быть
+              собранными всё время — невозможно. Концентрация — мышца, и она
+              может не выдержать, если не давать ей отдохнуть.
+            </p>
+          </div>
+          <div class="text-group">
+            <h4 class="main__paragraph-title title-decor">Еда</h4>
+            <p class="main__paragraph">
+              «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
+              доставляют в мозг энергию и помогают ему лучше работать. Но уходит
+              эта энергия также быстро, как и приходит. А мы в результате
+              попадаем на «углеводные качели»: как только действие «быстрых
+              углеводов» заканчивается, мы чувствуем усталость и сонливость. И
+              хотим ещё больше быстрых углеводов.
+            </p>
+          </div>
+          <div class="text-group">
+            <h4 class="main__paragraph-title title-decor">Гаджеты</h4>
+            <p class="main__paragraph">
+              Да-да, это та самая ситуация, когда на экране ноутбука — код, в
+              наушниках — подкаст, а на компьютере фоном — ещё и видео с
+              забавными утятами. В результате мозг пытается переключиться с
+              одной задачи на другую — и просто не может. А чтобы вернуться к
+              состоянию полной концентрации, человеку в среднем нужно 20 минут.
+              Вот и получается, что чем больше времени мы проводим в гаджетах,
+              тем больше времени затем нужно, чтобы вернуться к работе.
+            </p>
+          </div>
+        </section>
+        <section class="main__section">
+          <h3 class="main__section-title">
+            Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
+            секунд)
+          </h3>
+          <h4
+            class="main__paragraph-title main__paragraph-title-big-margin title-decor"
           >
-            выяснили</a
-          >, что мозгу тяжело концентрироваться даже на двух делах одновременно.
-          А когда в поле внимания попадает несколько важных задач, организм
-          паникует и выделяет кортизол и адреналин — «гормоны стресса». Из-за
-          этого мы работаем невнимательно: ошибаемся и быстро устаём.
-        </p>          
-        </div>
-        <div>
-        <h4 class="main__paragraph-title title-decor">Дофамин</h4>
-        <p class="main__paragraph">
-          С гормонами стресса всё понятно, но дальше — ещё интереснее. В нашей
-          невозможности сосредоточиться замешана и полная противоположность
-          стрессу — дофамин. Это вещество участвует в системе вознаграждения
-          мозга. Причём тут он? Мы часто отвлекаемся от важной задачи на что-то
-          более «приятное» для мозгов. Например, смотрим лайки в соцсетях. В это
-          время и выделяется дофамин — и мы чувствуем удовольствие. Получается
-          замкнутый круг: чем больше отвлекаешься, тем больше удовольствия
-          получаешь.
-        </p>          
-        </div>
+            5 простых (на самом деле не очень) советов
+          </h4>
+          <div class="text-group">
+            <h5 class="main__paragraph-subtitle title-decor">
+              Представьте небо и облака
+            </h5>
+            <p class="main__paragraph">
+              Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
+              успокоиться. Ведь часто именно тревожные мысли о сложных задачах
+              как раз и мешают эти сложные задачи делать. В такие моменты можно
+              закрыть глаза и представить, что чистое небо — это вы, а облака —
+              тревожные мысли. И сколько бы их ни было — ясное небо всегда будет
+              где-то там, за тучами, и никуда не денется. Это упражнение поможет
+              вернуться в настоящий момент, а не волноваться о потенциальных
+              проблемах из будущего.
+            </p>
+          </div>
+          <div class="text-group">
+            <h5 class="main__paragraph-subtitle title-decor">
+              Включите музыку
+            </h5>
+            <p class="main__paragraph">
+              Но не любую, и не любимую. Любимая может быть связана с сильными
+              положительными эмоциями, которые тоже очень сильно отвлекают.
+              Подойдёт тихая, спокойная, умеренно-ритмичная. Можно вообще
+              попробовать включить плейлист с «белым шумом» или нейромузыкой.
+            </p>
+          </div>
+          <div class="text-group">
+            <h5 class="main__paragraph-subtitle title-decor">Прогуляйтесь</h5>
+            <p class="main__paragraph">
+              Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
+              <a
+                href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
+                class="main__paragraph-link"
+              >
+                показал</a
+              >, что созерцание природы повышает концентрацию, в то время как
+              после просмотра городских пейзажей она наоборот понижается. Можно
+              совместить прогулку с физическими упражнениями или бегом — так в
+              мозг поступит ещё больше кислорода и он будет лучше работать. Но и
+              простая двадцатиминутная прогулка — тоже отличный вариант.
+            </p>
+          </div>
+          <div class="text-group">
+            <h5 class="main__paragraph-subtitle title-decor">Хорошо ешьте</h5>
+            <p class="main__paragraph">
+              Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
+              которые препятствуют резким скачкам сахара в крови. Например, с
+              высоким содержанием клетчатки: овощи, ягоды, бобовые (нут,
+              чечевица, фасоль), коричневый рис, хлеб из цельнозерновой пшеницы.
+            </p>
+          </div>
+          <div class="text-group">
+            <h5 class="main__paragraph-subtitle title-decor">Читайте</h5>
+            <p class="main__paragraph">
+              Настоящие бумажные книги. Это правда помогает с концентрацией:
+              чтобы прочитать пост в соцсети, достаточно нескольких минут или
+              даже секунд. А вот интересная книга способна затянуть и на
+              несколько часов и круто тренирует направленное внимание.
+            </p>
+          </div>
+        </section>
       </article>
-      <article class="main__article">
-        <h3 class="main__article-title">Что снижает концентрацию внимания?</h3>
-        <div class="card">
-        <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
-        <p class="main__paragraph">
-          Как концентрация может снижаться из-за… концентрации? Любая стрессовая
-          ситуация (и резко меняющийся мир в целом) заставляет наш мозг
-          постоянно «сканировать» окружающую среду на предмет опасности.
-          Например, читать новости вместо работы. Но быть собранными всё время —
-          невозможно. Концентрация — мышца, и она может не выдержать, если не
-          давать ей отдохнуть.
-        </p>          
-        </div>
-        <div class="card">
-        <h4 class="main__paragraph-title title-decor">Еда</h4>
-        <p class="main__paragraph">
-          «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
-          доставляют в мозг энергию и помогают ему лучше работать. Но уходит эта
-          энергия также быстро, как и приходит. А мы в результате попадаем на
-          «углеводные качели»: как только действие «быстрых углеводов»
-          заканчивается, мы чувствуем усталость и сонливость. И хотим ещё больше
-          быстрых углеводов.
-        </p>          
-        </div>
-        <div class="card">
-        <h4 class="main__paragraph-title title-decor">Гаджеты</h4>
-        <p class="main__paragraph">
-          Да-да, это та самая ситуация, когда на экране ноутбука — код, в
-          наушниках — подкаст, а на компьютере фоном — ещё и видео с забавными
-          утятами. В результате мозг пытается переключиться с одной задачи на
-          другую — и просто не может. А чтобы вернуться к состоянию полной
-          концентрации, человеку в среднем нужно 20 минут. Вот и получается, что
-          чем больше времени мы проводим в гаджетах, тем больше времени затем
-          нужно, чтобы вернуться к работе.
-        </p>          
-        </div>
-      </article>
-      <article class="main__article main__article-in-columns">
-        <h3 class="main__article-title">
-          Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
-          секунд)
-        </h3>
-        <h4
-          class="main__paragraph-title main__paragraph-title-big-margin title-decor"
-        >
-          5 простых (на самом деле не очень) советов
-        </h4>
-        <div class="card">
-        <h5 class="main__paragraph-subtitle title-decor">
-          Представьте небо и облака
-        </h5>
-        <p class="main__paragraph">
-          Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
-          успокоиться. Ведь часто именно тревожные мысли о сложных задачах как
-          раз и мешают эти сложные задачи делать. В такие моменты можно закрыть
-          глаза и представить, что чистое небо — это вы, а облака — тревожные
-          мысли. И сколько бы их ни было — ясное небо всегда будет где-то там,
-          за тучами, и никуда не денется. Это упражнение поможет вернуться в
-          настоящий момент, а не волноваться о потенциальных проблемах из
-          будущего.
-        </p>          
-        </div>
-        <div class="card">
-        <h5 class="main__paragraph-subtitle title-decor">Включите музыку</h5>
-        <p class="main__paragraph">
-          Но не любую, и не любимую. Любимая может быть связана с сильными
-          положительными эмоциями, которые тоже очень сильно отвлекают. Подойдёт
-          тихая, спокойная, умеренно-ритмичная. Можно вообще попробовать
-          включить плейлист с «белым шумом» или нейромузыкой.
-        </p>          
-        </div>
-        <div class="card">
-        <h5 class="main__paragraph-subtitle title-decor">Прогуляйтесь</h5>
-        <p class="main__paragraph">
-          Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
-          <a
-            href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
-            class="main__paragraph-link"
-          >
-            показал</a
-          >, что созерцание природы повышает концентрацию, в то время как после
-          просмотра городских пейзажей она наоборот понижается. Можно совместить
-          прогулку с физическими упражнениями или бегом — так в мозг поступит
-          ещё больше кислорода и он будет лучше работать. Но и простая
-          двадцатиминутная прогулка — тоже отличный вариант.
-        </p>          
-        </div>
-        <div class="card">
-        <h5 class="main__paragraph-subtitle title-decor">Хорошо ешьте</h5>
-        <p class="main__paragraph">
-          Мы — не ваша бабушка, но это правда важно. Выбирайте продукты, которые
-          препятствуют резким скачкам сахара в крови. Например, с высоким
-          содержанием клетчатки: овощи, ягоды, бобовые (нут, чечевица, фасоль),
-          коричневый рис, хлеб из цельнозерновой пшеницы.
-        </p>          
-        </div>
-        <div class="card">
-        <h5 class="main__paragraph-subtitle title-decor">Читайте</h5>
-        <p class="main__paragraph">
-          Настоящие бумажные книги. Это правда помогает с концентрацией: чтобы
-          прочитать пост в соцсети, достаточно нескольких минут или даже секунд.
-          А вот интересная книга способна затянуть и на несколько часов и круто
-          тренирует направленное внимание.
-        </p>          
-        </div>
-      </article>
+      <section class="main__galery">
+        <h4 class="main__paragraph-title title-decor">А можно в картинках?</h4>
+        <ul class="main__galery-list">
+          <li class="main__galery-list-item">
+            <img
+              src="./images/sunset.png"
+              class="main_img main_img-sunset"
+              alt="закат за горами на солнце в фиолетовых тонах"
+              loading="lazy"
+            />
+          </li>
+          <li class="main__galery-list-item">
+            <img
+              src="./images/ice-cream.png"
+              class="main_img main_img-food"
+              alt="тарелка с морженным с лицами на шариках и кремом"
+              loading="lazy"
+            />
+          </li>
+          <li class="main__galery-list-item">
+            <img
+              src="./images/tape.png"
+              class="main_img main_img-tape"
+              alt="фиолетовая касета"
+              loading="lazy"
+            />
+          </li>
+          <li class="main__galery-list-item">
+            <img
+              src="./images/books.png"
+              class="main_img main_img-book"
+              alt="чашка на стопке с книгами"
+              loading="lazy"
+            />
+          </li>
+          <li>
+            <img
+              src="./images/street.png"
+              class="main_img main_img-street"
+              alt="японская улица в фиолетовых тонах"
+              loading="lazy"
+            />
+          </li>
+        </ul>
+      </section>
     </main>
-    <section class="main__galery">
-      <h4 class="main__paragraph-title title-decor">А можно в картинках?</h4>
-      <ul class="main__galery-list">
-        <li class="main__galery-list-item">
-          <img
-            src="./images/sunset.png"
-            class="main_img main_img-sunset"
-            alt="закат за горами на солнце в фиолетовых тонах"
-            loading="lazy"
-          />
-        </li>
-        <li class="main__galery-list-item">
-          <img
-            src="./images/ice-cream.png"
-            class="main_img main_img-food"
-            alt="тарелка с морженным с лицами на шариках и кремом"
-            loading="lazy"
-          />
-        </li>
-        <li class="main__galery-list-item">
-          <img
-            src="./images/tape.png"
-            class="main_img main_img-tape"
-            alt="фиолетовая касета"
-            loading="lazy"
-          />
-        </li>
-        <li class="main__galery-list-item">
-          <img
-            src="./images/books.png"
-            class="main_img main_img-book"
-            alt="чашка на стопке с книгами"
-            loading="lazy"
-          />
-        </li>
-        <li>
-          <img
-            src="./images/street.png"
-            class="main_img main_img-street"
-            alt="японская улица в фиолетовых тонах"
-            loading="lazy"
-          />
-        </li>
-      </ul>
-    </section>
     <footer class="footer decorated-zone">
       <h2 class="footer__title">focus</h2>
     </footer>
