--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
     </header>
     <main class="main">
       <article>
-        <section class="main__section">
+        <section class="main__section section-why">
           <h3 class="main__section-title">Почему сосредоточиться так сложно</h3>
           <div class="text-group">
             <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
@@ -99,7 +99,7 @@
           </div>
         </section>
         <section class="main__section">
-          <h3 class="main__section-title">
+          <h3 class="main__section-title section-title-what">
             Что снижает концентрацию внимания?
           </h3>
           <div class="text-group">
@@ -137,17 +137,17 @@
             </p>
           </div>
         </section>
-        <section class="main__section">
+        <section class="main__section section-how">
           <h3 class="main__section-title">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
           </h3>
-          <h4
-            class="main__paragraph-title main__paragraph-title-big-margin title-decor"
-          >
-            5 простых (на самом деле не очень) советов
-          </h4>
           <div class="text-group">
+            <h4
+              class="main__paragraph-title main__paragraph-title-big-margin title-decor"
+            >
+              5 простых (на самом деле не очень) советов
+            </h4>
             <h5 class="main__paragraph-subtitle title-decor">
               Представьте небо и облака
             </h5>
@@ -210,44 +210,44 @@
         </section>
       </article>
       <section class="main__galery">
-        <h4 class="main__paragraph-title title-decor">А можно в картинках?</h4>
+        <h4 class="main__paragraph-title title-decor galery-title">А можно в картинках?</h4>
         <ul class="main__galery-list">
-          <li class="main__galery-list-item">
+          <li class="main__galery-list-item img-sunset">
             <img
               src="./images/sunset.png"
-              class="main_img main_img-sunset"
+              class="main_img"
               alt="закат за горами на солнце в фиолетовых тонах"
               loading="lazy"
             />
           </li>
-          <li class="main__galery-list-item">
+          <li class="main__galery-list-item img-food">
             <img
               src="./images/ice-cream.png"
-              class="main_img main_img-food"
+              class="main_img"
               alt="тарелка с морженным с лицами на шариках и кремом"
               loading="lazy"
             />
           </li>
-          <li class="main__galery-list-item">
+          <li class="main__galery-list-item img-tape">
             <img
               src="./images/tape.png"
-              class="main_img main_img-tape"
+              class="main_img"
               alt="фиолетовая касета"
               loading="lazy"
             />
           </li>
-          <li class="main__galery-list-item">
+          <li class="main__galery-list-item img-book">
             <img
               src="./images/books.png"
-              class="main_img main_img-book"
+              class="main_img"
               alt="чашка на стопке с книгами"
               loading="lazy"
             />
           </li>
-          <li>
+          <li class="main__galery-list-item img-street">
             <img
               src="./images/street.png"
-              class="main_img main_img-street"
+              class="main_img"
               alt="японская улица в фиолетовых тонах"
               loading="lazy"
             />
