--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
             </p>
           </div>
         </section>
-        <section class="main__section">
+        <section class="main__section section-what">
           <h3 class="main__section-title section-title-what">
             Что снижает концентрацию внимания?
           </h3>
