ready for first check

--- a/index.html
+++ b/index.html
@@ -6,16 +6,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
-    <link rel="icon" href="favicon.ico" sizes="any" />
-    <link rel="icon" href="icon.svg" type="image/svg+xml" />
-    <link rel="apple-touch-icon" href="apple-touch-icon.png" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any" />
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
     <script src="./scripts/script.js"></script>
     <link rel="stylesheet" href="./styles/globals.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Mono:wght@400&display=swap"
-      rel="stylesheet"
-    />
-    <!--убрать потом-->
     <link rel="stylesheet" href="./styles/style.css" />
     <link rel="stylesheet" href="./fonts/fonts.css" />
     <link rel="stylesheet" href="./styles/variables.css" />
@@ -210,7 +204,9 @@
         </section>
       </article>
       <section class="main__galery">
-        <h4 class="main__paragraph-title title-decor galery-title">А можно в картинках?</h4>
+        <h4 class="main__paragraph-title title-decor galery-title">
+          А можно в картинках?
+        </h4>
         <ul class="main__galery-list">
           <li class="main__galery-list-item img-sunset">
             <img
