ready for check 2 attempt

--- a/index.html
+++ b/index.html
@@ -6,8 +6,9 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <meta name="color-scheme" content="dark light" />
     <title>Сложно сосредоточиться</title>
-    <link rel="icon" href="./images/favicon.ico" sizes="any" />
-    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml" />
+    <link rel="icon" href="./images/favicon.ico" sizes="any"/>
+    <link rel="icon" href="./images/favicon.svg" type="image/svg+xml"/>
+    <link rel="apple-touch-icon" href="./images/favicon.ico"/>
     <script src="./scripts/script.js"></script>
     <link rel="stylesheet" href="./styles/globals.css" />
     <link rel="stylesheet" href="./styles/style.css" />
@@ -57,10 +58,10 @@
     </header>
     <main class="main">
       <article>
-        <section class="main__section section-why">
-          <h3 class="main__section-title">Почему сосредоточиться так сложно</h3>
+        <section class="main__section section-why section-same-style">
+          <h2 class="main__section-title">Почему сосредоточиться так сложно</h2>
           <div class="text-group">
-            <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
+            <h3 class="main__paragraph-title title-decor">Многозадачность</h3>
             <p class="main__paragraph">
               Особенно сложно сосредоточиться, когда задач много и все они —
               важные. Где же легендарная многозадачность, когда она так нужна
@@ -69,6 +70,7 @@
               <a
                 href="https://dana.org/news-and-insights"
                 class="main__paragraph-link"
+                target="_blank"
               >
                 выяснили</a
               >, что мозгу тяжело концентрироваться даже на двух делах
@@ -79,7 +81,7 @@
             </p>
           </div>
           <div class="text-group">
-            <h4 class="main__paragraph-title title-decor">Дофамин</h4>
+            <h3 class="main__paragraph-title title-decor">Дофамин</h3>
             <p class="main__paragraph">
               С гормонами стресса всё понятно, но дальше — ещё интереснее. В
               нашей невозможности сосредоточиться замешана и полная
@@ -93,11 +95,11 @@
           </div>
         </section>
         <section class="main__section section-what">
-          <h3 class="main__section-title section-title-what">
+          <h2 class="main__section-title section-title-what">
             Что снижает концентрацию внимания?
           </h3>
           <div class="text-group">
-            <h4 class="main__paragraph-title title-decor">Многозадачность</h4>
+            <h3 class="main__paragraph-title title-decor">Многозадачность</h3>
             <p class="main__paragraph">
               Как концентрация может снижаться из-за… концентрации? Любая
               стрессовая ситуация (и резко меняющийся мир в целом) заставляет
@@ -108,7 +110,7 @@
             </p>
           </div>
           <div class="text-group">
-            <h4 class="main__paragraph-title title-decor">Еда</h4>
+            <h3 class="main__paragraph-title title-decor">Еда</h3>
             <p class="main__paragraph">
               «Быстрые углеводы» — сахар, белый хлеб, сладости — молниеносно
               доставляют в мозг энергию и помогают ему лучше работать. Но уходит
@@ -119,7 +121,7 @@
             </p>
           </div>
           <div class="text-group">
-            <h4 class="main__paragraph-title title-decor">Гаджеты</h4>
+            <h3 class="main__paragraph-title title-decor">Гаджеты</h3>
             <p class="main__paragraph">
               Да-да, это та самая ситуация, когда на экране ноутбука — код, в
               наушниках — подкаст, а на компьютере фоном — ещё и видео с
@@ -131,20 +133,20 @@
             </p>
           </div>
         </section>
-        <section class="main__section section-how">
-          <h3 class="main__section-title">
+        <section class="main__section section-how section-same-style">
+          <h2 class="main__section-title">
             Как концентрироваться лучше, чем золотая рыбка (то есть дольше трёх
             секунд)
-          </h3>
+          </h2>
           <div class="text-group">
-            <h4
+            <h3
               class="main__paragraph-title main__paragraph-title-big-margin title-decor"
             >
               5 простых (на самом деле не очень) советов
-            </h4>
-            <h5 class="main__paragraph-subtitle title-decor">
+            </h3>
+            <h4 class="main__paragraph-subtitle title-decor">
               Представьте небо и облака
-            </h5>
+            </h4>
             <p class="main__paragraph">
               Или листья в ручье. Тут дело в лёгкой медитации, которая помогает
               успокоиться. Ведь часто именно тревожные мысли о сложных задачах
@@ -157,9 +159,9 @@
             </p>
           </div>
           <div class="text-group">
-            <h5 class="main__paragraph-subtitle title-decor">
+            <h4 class="main__paragraph-subtitle title-decor">
               Включите музыку
-            </h5>
+            </h4>
             <p class="main__paragraph">
               Но не любую, и не любимую. Любимая может быть связана с сильными
               положительными эмоциями, которые тоже очень сильно отвлекают.
@@ -168,12 +170,13 @@
             </p>
           </div>
           <div class="text-group">
-            <h5 class="main__paragraph-subtitle title-decor">Прогуляйтесь</h5>
+            <h4 class="main__paragraph-subtitle title-decor">Прогуляйтесь</h4>
             <p class="main__paragraph">
               Или даже пробегитесь. Лучше найти парк или лес: один эксперимент
               <a
                 href="https://www.sciencedirect.com/science/article/abs/pii/S0272494415000328"
                 class="main__paragraph-link"
+                target="_blank"
               >
                 показал</a
               >, что созерцание природы повышает концентрацию, в то время как
@@ -184,7 +187,7 @@
             </p>
           </div>
           <div class="text-group">
-            <h5 class="main__paragraph-subtitle title-decor">Хорошо ешьте</h5>
+            <h4 class="main__paragraph-subtitle title-decor">Хорошо ешьте</h4>
             <p class="main__paragraph">
               Мы — не ваша бабушка, но это правда важно. Выбирайте продукты,
               которые препятствуют резким скачкам сахара в крови. Например, с
@@ -193,7 +196,7 @@
             </p>
           </div>
           <div class="text-group">
-            <h5 class="main__paragraph-subtitle title-decor">Читайте</h5>
+            <h4 class="main__paragraph-subtitle title-decor">Читайте</h4>
             <p class="main__paragraph">
               Настоящие бумажные книги. Это правда помогает с концентрацией:
               чтобы прочитать пост в соцсети, достаточно нескольких минут или
@@ -204,9 +207,9 @@
         </section>
       </article>
       <section class="main__galery">
-        <h4 class="main__paragraph-title title-decor galery-title">
+        <h2 class="main__paragraph-title title-decor galery-title">
           А можно в картинках?
-        </h4>
+        </h2>
         <ul class="main__galery-list">
           <li class="main__galery-list-item img-sunset">
             <img
